<resources>
    <string name="app_name">MiParker</string>
    <string name="find_lot_location">Find your lot</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_signup">Sign in</string>
    <string name="create_account">Create your Account</string>
    <string name="welcome_back">Welcome back</string>
    <string name="welcome">Welcome</string>
    <string name="just_a_few_details">Just a few details and we\'ll get you started</string>
    <string name="login_to_continue">Please login to continue</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_sample">0754 123456</string>
    <string name="number_plate">Number Plate</string>
    <string name="number_plate_sample">UBA 123A</string>
    <string name="password">Password</string>
    <string name="sample_password">12345</string>
    <string name="retype_password">Retype Password</string>
    <string name="already_signed_up">Already signed up? Click here!</string>
    <string name="create_new_account">Not Signed up? Create new Account here!</string>
    <string name="not_signed_up">Not Signed up? Create new Account</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="copyright">Copyright © MiParker 2018</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sample_user_name">Bbengo Reagan</string>
    <string name="sample_email">benrea81@gmail.com</string>
    <string name="who_is_here">Who is here?</string>
    <string name="exterior_photo">Exterior Photo</string>
    <string name="interior_photo">Interior Photo</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="location">Location</string>
    <string name="parking_lot_name">Parking lot Name</string>
    <string name="number_of_slots">Number of Slots</string>
    <string name="slots">slots</string>
    <string name="sample_slots">00/00</string>
    <string name="sample_coordinates">0.000000</string>
    <string name="city_town_village">City/Town/Village</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_help">Help</string>
    <string name="where_are_you_going">Where are you going?</string>
    <string name="address">Address</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="confirm_parking">Click yes confirm that you are parking in here, you can cancel if not</string>
    <string name="remove_parking_location">Are you Sure you want to remove this parked location?</string>
    <string name="thanks">Thanks for using MiParker</string>
    <string name="large_text">
        Every car on the road needs a space to be parked in and this is a key issue in almost all urban centres.
        Cars in urban centres take up space when they are moving but an average of twenty-three hours a day they are parked,
        and if at all they were used for all journeys they would require parking space at both ends of the trip hence need
        for more parking space required. Often times cars in developing countries get more parking space than an average human.

        \n\n(Tom Rye, 2014)Parking is a very important aspect in the transport sector since the availability of convenient, safe
        and secure parking spots determine how people reach their destinations. In many developing cities, parking is still a
        major challenge in way that even the available off-street parking are cut of roads which is not in line with one of the
        good modules of go parking which Parking needs space which is not at any moment available to other road users.

        \n\nMiParker Parking System is a software system designed to enable drivers conveniently lease a parking spot in their
        desired parking lot just in the palm of their hands. In a fast growing urban centre like Kampala mainly due Rural Urban
        Migration there are also increased numbers of auto mobiles with constant number of traffic regulation and management
        facilities hence high competition for the few ones and also uncertainties in acquiring them. This app will help you
        to eliminate uncertainties in finding a parking spot.
    </string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="are_you_a_parking_lot_owner">
        Are you a Parking Lot Owner or Administrator?
        \nClick here to go to your Signup!
    </string>
    <string name="are_you_a_parking_lot_owner_settings">
        Are you a Parking Lot Owner or Admin?
        \nClick here to go to Proceed!
    </string>
    <string name="description_of_parking_lot">Description of Parking lot</string>
    <string name="user_profile">User Profile</string>
    <string name="click_user_profile">
        Click here to setup your personal and User interface preferences  </string>
    <string name="payment_and_currency">Payment and Currency</string>
    <string name="payment_preferences">
        Click here to setup your country Currency and Payment preferences
    </string>
    <string name="notifications">Notifications and Sounds</string>
    <string name="mute_notifications">
        Click here to go to mute your Sounds or Popup Notifications
    </string>
    <string name="log_out">Log out</string>
    <string name="parking_lot_owner">Parking lot Owner?</string>
    <string name="log_in_as_a_parking_lot_owner">
        Are you a Parking Lot Admin?
        \nLog in here!
    </string>
    <string name="parking_lot_owner_endeavour">
        "Please endeavour to have clearance with valid documents from the Required Authorities."
    </string>
    <string name="payment_implementation_reason">
        We are unable to provide Parking lot Payment via MiParker at the moment!

        \n\nThis is because of the technicalities required to gain clearance from the Required Authorities.
        We\'ll notify you when this is available.
    </string>
    <string name="title_activity_main_parking_lot_owner">MainActivityParkingLotOwner</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_Pinned">Pinned Lots</string>
    <string name="app_id">com.example.david.parker</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_history">History</string>
    <string name="accept">Park Me</string>
    <string name="done">Success</string>
    <string name="title_activity_lot_owner">Map</string>
    <string name="today">Today</string>
    <string name="sample_time">12:59</string>
    <string name="end_user_agreement">End User Agreement</string>
    <string name="privacy_statement">Privacy Statement</string>
    <string name="third_party_licences">Third Party Licenses</string>
    <string name="developed_by">
        This Software is brought to you by:

        \n\nKisekka David
        \nBasajjabaka Marvin
        \nMajanga Joseph
        \nBbengo Reagan

        \n\nAs a Final Year Project while at Makerere University
    </string>
    <string name="version">Version</string>
    <string name="payment">Payment</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="account_holder">Account Holder</string>
    <string name="master_card_number_sample">XXXX-XXXX-XXXX-XXXX-1234</string>
    <string name="expire">Expires</string>
    <string name="cov">COV</string>
    <string name="sample_date_mastercard">08/19</string>
    <string name="cov_sample">789</string>
    <string name="sample_payment_amount_with_currency">UGX 0.000</string>
</resources>