<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/payment" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_applications_lightblue_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_lightbulb_outline_black_24dp"
            android:title="@string/about" />

    </group>
</menu>
