<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="160dp"
    android:background="@drawable/round_corner_card_blue_fill">

    <TextView
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/master_card_number_sample"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/product_sans"/>
    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textAllCaps="true"
            android:text="@string/account_holder"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/product_sans"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/sample_user_name"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/product_sans"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:text="@string/expire"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@font/product_sans"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/sample_date_mastercard"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@font/product_sans"/>
            </LinearLayout>
            <LinearLayout
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:text="@string/cov"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@font/product_sans"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/cov_sample"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@font/product_sans"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
