<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About"
    android:background="@color/colorPrimaryDarkCustom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:onClick="endUserAgreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_user_agreement"
            android:textSize="16sp"
            android:fontFamily="@font/product_sans"
            android:textColor="@color/colorAccent"
            android:textStyle="normal"/>
        <TextView
            android:onClick="privacyStatement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/privacy_statement"
            android:textSize="16sp"
            android:fontFamily="@font/product_sans"
            android:textColor="@color/colorAccent"
            android:textStyle="normal"/>
        <TextView
            android:onClick="thirdPartyLicences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/third_party_licences"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/product_sans"
            android:textStyle="normal"/>

        <LinearLayout
            android:alpha="0.6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <View
                android:alpha="0.6"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/hintColor"/>
            <TextView
                android:onClick="aboutMyParkerDevelopers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/developed_by"
                android:textSize="14sp"
                android:fontFamily="@font/product_sans"
                android:textColor="@color/colorAccentCustom"
                android:textStyle="normal"/>
            <View
                android:alpha="0.6"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/hintColor"/>
            <TextView
                android:foregroundGravity="bottom"
                android:gravity="bottom"
                android:layout_gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/version"
                android:textAllCaps="true"
                android:textSize="13sp"
                android:fontFamily="@font/product_sans"
                android:textColor="@color/colorAccentCustom"
                android:textStyle="normal"/>
            <TextView
                android:layout_marginTop="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_coordinates"
                android:textSize="14sp"
                android:fontFamily="@font/product_sans"
                android:textColor="@color/colorAccentCustom"
                android:textStyle="normal"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>