<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.david.myparker.SignInDriverActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@color/colorPrimaryDarkCustom">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="45dp"
                android:src="@drawable/myparker_logo_only_blue_3x"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/product_sans"
                android:textStyle="normal"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/login_to_continue"
                android:textSize="14sp"
                android:textColor="@color/colorAccentCustom"
                android:fontFamily="@font/product_sans"
                android:textStyle="normal"
                android:gravity="center"/>

            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_gravity="center"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:visibility="gone" />


            <RelativeLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:paddingEnd="15dp"
                android:background="@drawable/rounder_corner_lightblue">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="7dp"
                    android:src="@drawable/mail_lightblue"/>
                <View
                    android:layout_width="1.5dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="38dp"
                    android:background="#00c3ff"/>
                <EditText
                    android:background="@null"
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="48dp"
                    android:layout_centerVertical="true"
                    android:textColorHint="#01457c"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@font/product_sans"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:paddingEnd="15dp"
                android:background="@drawable/rounder_corner_lightblue">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="7dp"
                    android:src="@drawable/logout_lightblue"/>
                <View
                    android:layout_width="1.5dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="38dp"
                    android:background="#00c3ff"/>
                <EditText
                    android:background="@null"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="48dp"
                    android:layout_centerVertical="true"
                    android:textColorHint="#01457c"
                    android:hint="@string/password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:textSize="15sp"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@font/product_sans"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </RelativeLayout>

            <Button
                android:onClick="btnDriverSignIn"
                style="?android:textAppearanceSmall"
                android:layout_width="75dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/round_corner_fill_lightblue"
                android:text="@string/log_in"
                android:textColor="@color/colorPrimaryDarkCustom"
                android:textStyle="bold"
                android:fontFamily="@font/product_sans"/>
            <TextView
                android:onClick="buttonDriverCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/create_new_account"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:fontFamily="@font/product_sans"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:text="@string/copyright"
                android:textColor="@color/hintColor"
                android:textSize="14sp"
                android:fontFamily="@font/product_sans"
                android:gravity="center"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
