<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="75dp"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal">

    <LinearLayout
        android:background="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_centerVertical="true"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/car_dark_lightblue_white_border"
                android:id="@+id/profile_photo"/>
            <LinearLayout
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/profile_photo"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimaryDarkCustom"
                    android:text="@string/sample_user_name"
                    android:fontFamily="@font/product_sans"
                    android:id="@+id/userName" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_plate_sample"
                    android:textColor="@color/colorPrimaryDarkCustom"
                    android:textSize="16sp"
                    android:fontFamily="@font/product_sans"
                    android:id="@+id/number_plate"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_corner_faint_apptheme"
                        android:padding="2dp"
                        android:paddingStart="7dp"
                        android:paddingEnd="7dp"
                        android:id="@+id/today"
                        android:text="@string/today"
                        android:textColor="@color/colorPrimaryDarkCustom"
                        android:textSize="12sp"
                        android:fontFamily="@font/product_sans"/>
                    <TextView
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_corner_faint_apptheme"
                        android:padding="2dp"
                        android:paddingStart="7dp"
                        android:paddingEnd="7dp"
                        android:id="@+id/time"
                        android:text="@string/sample_time"
                        android:textColor="@color/colorPrimaryDarkCustom"
                        android:textSize="12sp"
                        android:fontFamily="@font/product_sans"/>
                </LinearLayout>
                <TextView
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/sample_payment_amount_with_currency"
                    android:textColor="@color/colorPrimaryDarkCustomFaint"
                    android:fontFamily="@font/product_sans"/>
            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>